08/22/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.2.1.1 'Monza':
	- oAuth security implementation. (TODO)
	- TLS renegotiation DoS attack prevention implemented;
	- FQDN as relay-ip and listener-ip parameters (issue 6)
	(patch provided by Iñaki Baz Castillo);
	- redis user key operation fixed.
	- redis, mysql and psql db operations fixed.
	- SHA-256 memory leak fixed.
	- Mobility ticket retransmission fixed.
	- Move debian package from SVN to GIT.
	- Move secondary download area to coturn.net.
	
08/14/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.1.2.1 'Vitari':
	- The origin attribute is verified in the subsequent 
	session messages (server flag --check-origin-consistency).
	- MySQL SSL connection support.
	- Crash fixed when the DB connection string is incorrect.
	- Minor docs fixes.
	
07/29/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.1.1.1 'Vitari':
	- Forceful server-side session cancellation implemented
	(in telnet console).
	
07/22/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.1.0.2 'Vitari':
	- SSODA (double allocation) draft support added.
	- DB "driver" abstraction and MongoDB support (by Federico Pinna).
	- multiple origins supported per request.
	- "allocation mismatch" condition fixed (merged from rfc5766-turn-server).
	- STUN BINDING response fixed in the case of -X (external address) option.
	- "pu" CLI command fixed.
	- session cleaning fixed in TCP relay functionality (RFC 6062).
	- some crash conditions fixed.
	- working on compilation warnings.

06/21/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.0.1.3 'Severard':
	- Redis DB connection status fixed (Issue 129).
	- Logfile reset on SIGHUP
	(Gustavo Garcia suggestion).
	- Log reset CLI command.
	- Some error code corrections:
	    * "Mobility forbidden" error changed, to value 405.
	    * "Wrong credentials" situation is now treated as error 441.

06/06/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.0.1.2 'Severard':
	- Bandwidth draft implemented.